scss/app.scss
$gordon-blue: #014983;
$text-color: #fff;

.center {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.horizontal-center {
  position: relative;
  left: 50%;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%);
}

@font-face {
  font-family: 'Open Sans';
  font-weight: 700;
  src: url('/fonts/OpenSans-Bold.ttf') format('truetype');
}
// Override default background color
.view.gordon-blue-background,
.pane.gordon-blue-background {
  background-color: $gordon-blue;
}
// Override default font sizes
.scroll-content {
  h1 { font-size: 75vw; line-height: 1; }
  h2 { font-size: 10vw; }
  h1, h2 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    color: $text-color;
  }
}
// Main (chapel credit) page styles
.main-content {
  .chapel-loader-container {
    .gordon-chapel {
      margin-bottom: -1.1rem;
      height: 20em;
      -webkit-animation: fade 1s infinite alternate;
              animation: fade 1s infinite alternate;
    }
  }
  .text-container {
    margin-left: 1em;
    margin-right: 1em;
  }
}
// Make Modal only cover part of the screen
.modal-backdrop { top: 50%; }
// Hide ugly backdrop
.modal-backdrop.active { background-color: rgba(0, 0, 0, 0); }
.banner-content {
  font-size: 1.2rem;
  line-height: 1.5rem;
}
// Override bar-header height change in iOS modal
.platform-ios.platform-cordova:not(.fullscreen) {
  .modal {
    .bar-header:not(.bar-subheader) {
      height: $bar-height;

      > * {
        margin-top: 0;
      }
    }
    // ion-content push
    .has-header {
      top: $bar-height;
    }
  }
}
// Login page styles
.login-content {
  .gordon-chapel {
    @extend .horizontal-center;
    width: 34vw;
    margin-top: 1rem;
  }
  .login-title {
    margin-top: 0;
    text-align: center;
  }
  .login-form {
    margin-left: 0.75rem;
    margin-right: 0.75rem;
    .item {
      margin-top: 5px;
      margin-bottom: 5px;
      &.has-error {
        border-bottom: 2px solid red;
        .input-label {
          color: red;
        }
      }
      &.valid {
        border-bottom: 2px solid green;
        .input-label {
          color: green;
        }
      }
    }
    .login-info {
      margin-top: 2rem;
      font-size: 1.2rem;
      font-family: sans-serif;
      color: $text-color;
    }
    .login-errors {
      margin-left: 1rem;
      text-align: left;
      font-weight: 500;
      color: red;
      &.ng-hide {
        visibility: hidden;
        display: block !important;
      }
    }
    .login-button {
      @extend .horizontal-center;
      width: 75%;
    }
  }
}

// Loader animation (fade in and out)
@-webkit-keyframes fade {
  0% { opacity: 1; }
  100% { opacity: 0; }
}
@keyframes fade {
  0% { opacity: 1; }
  100% { opacity: 0; }
}

